fix category selector text
some of it was hidden by the map

--- a/opencart_preinstall/catalog/view/theme/default/stylesheet/aszok_bora_style.css
+++ b/opencart_preinstall/catalog/view/theme/default/stylesheet/aszok_bora_style.css
@@ -594,6 +594,7 @@ body {
 	height: 454px;
 	width: 718px;
 	position: relative;
+	z-index: -1;
 }
 .round_button_vertical {
 	background-color: #eade92;
